platforms/cilium-kubevirt/kubevirt-instance.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    vm.kubevirt.io/name: testvmi-nocloud
  name: virt-launcher-testvmi-nocloud
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    vm.kubevirt.io/name: testvmi-nocloud
  type: ClusterIP
