platforms/cilium-kubevirt/gateway-kubevirt.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kubevirt-nginx
  namespace: kubevirt-nginx
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: kubevirt-gw
    allowedRoutes:
      namespaces:
        from: Same
