platforms/cilium-kubevirt/kubevirt-vm-nginx-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-nginx
  namespace: kubevirt-nginx
spec:
  parentRefs:
  - name: kubevirt-nginx
    namespace: kubevirt-nginx
  hostnames:
  - "kubevirt-nginx.caas.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: virt-launcher-testvmi-nocloud
      port: 80
